# telescopegl

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPER.md  PLAN.md  README.md  environment.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: test.yml
polymerase/: __init__.py  __main__.py  _version.py
polymerase/alignment/: _helpers.py  calignment.pxd  calignment.pyx  fragments.py
polymerase/annotation/: __init__.py  bisect.py  gtf_utils.py  htseq.py  intervaltree.py
polymerase/cli/: __init__.py  assign.py  console.py  plugins.py  resume.py
polymerase/compute/: __init__.py  cpu_ops.py  gpu_ops.py  ops.py
polymerase/core/: likelihood.py  model.py  reporter.py
polymerase/plugins/: __init__.py  abc.py  registry.py  snapshots.py
polymerase/plugins/builtin/: __init__.py  assign.py  family_agg.py  normalize.py
polymerase/sparse/: backend.py  decompose.py  matrix.py  numba_matrix.py
polymerase/tests/: __init__.py  benchmark_baseline.py  benchmark_em.py  benchmark_pipeline.py  test_annotation.py  test_compute.py  test_decomposition.py  test_em.py  test_numba_sparse.py  test_numerical_equivalence.py  test_pipeline.py  test_plugins.py  test_sparse.py
polymerase/tests/data/: annotation_test.3.gtf
polymerase/utils/: colors.py  helpers.py
telescope/: __init__.py  __main__.py  telescope_assign.py  telescope_resume.py
telescope/tests/: __init__.py  benchmark_1pct.py  benchmark_baseline.py  benchmark_baseline_results.json  benchmark_em.py  test_1pct_pipeline.py  test_annotation_parsers.py  test_cpu_optimized_sparse.py  test_decomposition.py  test_em.py  test_numerical_equivalence.py  test_sparse_plus.py
telescope/utils/: __init__.py  _alignment.py  _annotation_bisect.py  _annotation_htseq.py  _annotation_intervaltree.py  alignment.py  annotation.py  backend.py  calignment.pyx  colors.py  cpu_optimized_sparse.py  decompose.py  helpers.py  likelihood.py  model.py  reporter.py  sparse_plus.py
